// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> is empty by default 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
    ]
  }
>
  <styled.div>
    <div
      className="sc-bdVaJa iOMCKQ"
    >
      <styled.table>
        <table
          className="sc-bwzfXH jwfMIB"
        >
          <tbody>
            <tr
              key="0"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="1"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="2"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="3"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                   
                </td>
              </styled.td>
            </tr>
          </tbody>
        </table>
      </styled.table>
    </div>
  </styled.div>
</Board>
`;

exports[`<Board /> is filled when the game has started 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        "E",
        "H",
        "R",
        "T",
      ],
      Immutable.List [
        "B",
        "I",
        "T",
        "E",
      ],
      Immutable.List [
        "G",
        "I",
        "S",
        "F",
      ],
      Immutable.List [
        "A",
        "M",
        "N",
        "O",
      ],
    ]
  }
>
  <styled.div>
    <div
      className="sc-bdVaJa iOMCKQ"
    >
      <styled.table>
        <table
          className="sc-bwzfXH jwfMIB"
        >
          <tbody>
            <tr
              key="0"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  E
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  H
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  R
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  T
                </td>
              </styled.td>
            </tr>
            <tr
              key="1"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  B
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  I
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  T
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  E
                </td>
              </styled.td>
            </tr>
            <tr
              key="2"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  G
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  I
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  S
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  F
                </td>
              </styled.td>
            </tr>
            <tr
              key="3"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  A
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  M
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  N
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-htpNat kcMuME"
                >
                  O
                </td>
              </styled.td>
            </tr>
          </tbody>
        </table>
      </styled.table>
    </div>
  </styled.div>
</Board>
`;
